# CoreMatrixToolkit

./: .gitignore  CMakeLists.txt  CMakePresets.json  GenerateProjectVS2022.bat  LICENSE  OpenProjectVS2022.bat  README.md
.github/workflows/: build-windows.yml  release-cpp-library.yml
cmake/: CMake-Clean-VS2022-x64.bat  CMake-MinGW-make-x64.bat  CMake-VS2022-x64.bat  CMakeShared.cmake
include/: jobScheduler.h
src/: jobScheduler.cpp  main.cpp
